fix icon/text alignment in the outcomes sidebar
Fixes: CNVS-37795

test plan:
- as a teacher/admin navigate to a course
- select the "coutcomes" link from the left-hand nav
- if you have an existing outcome click it from the left
  sidebar within the table... otherwise create one via the
  "+ Outcome" button
- the icons should now be aligned properly with the text - see
  example of new view: https://screencast.com/t/q0R6teepfY

Reviewed-on: https://gerrit.instructure.com/117185
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Kyle Follett <kfollett@instructure.com>

--- a/app/stylesheets/bundles/learning_outcomes.scss
+++ b/app/stylesheets/bundles/learning_outcomes.scss
@@ -153,7 +153,6 @@ ul.outcome-level {
       padding: $ic-sp/2 $ic-sp;
       color: $ic-font-color--subdued;
       span {
-        vertical-align: middle;
         &:hover {
           text-decoration: underline;
         }
